src/objects/Assignment__c.object
<CustomObject>
    <description>An assignment represents a block of tutoring that a school has purchased, made up of potentially multiple cohorts. 

Oscar Mawby @ Impact Box, 10/12/2019</description>
    <fields>
        <fullName>Area__c</fullName>
        <formula>TEXT(School__r.Area__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignmentMigrationNumber__c</fullName>
        <description>Built for purposes of data migration

Oscar Mawby @ Impact box</description>
        <label>Assignment Migration Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AssignmentName__c</fullName>
        <formula>IF(

MONTH(StartDate__c) &gt;= 9,

School__r.Name &amp; &quot; &quot; &amp; TEXT(YEAR( StartDate__c )) &amp; &quot;-&quot; &amp; RIGHT(TEXT(YEAR(StartDate__c )+1),2),

School__r.Name &amp; &quot; &quot; &amp; TEXT(YEAR(StartDate__c )-1) &amp; &quot;-&quot; &amp; RIGHT(TEXT(YEAR( StartDate__c )),2)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Sharmin @ Impact Box, 16 Jan to allocate owners to assignments. This will be used in task automation to set reminders for review meeting to be set.</description>
        <label>Assignment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutumnHalfTermEnd__c</fullName>
        <label>Autumn Half Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutumnHalfTermStart__c</fullName>
        <label>Autumn Half Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutumnTermEnd__c</fullName>
        <label>Autumn Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutumnTermStart__c</fullName>
        <label>Autumn Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Oscar Mawby @ Impact Box 07/01/2020</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HoursPurchased__c</fullName>
        <description>Numbering of tutoring hours purchased within this assignment.

Oscar Mawby @ Impact Box 13/12/19</description>
        <inlineHelpText>Numbering of tutoring hours purchased within this assignment.</inlineHelpText>
        <label>Hours Purchased</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks a record as Migrated from legacy systems. Oscar Mawby @ Impact box 22/01/20</description>
        <label>Legacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MidReviewDate__c</fullName>
        <description>Created by Sharmin @ Impact Box, 16 Jan. Created to store date when mid review date is with school</description>
        <label>Review Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Powerof1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReviewMeetingTaskCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Sharmin @ Impact Box, 16 Jan</description>
        <label>Review Meeting Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <description>The school that purchased this assignment

Oscar Mawby @ Impact Box 10/12/19</description>
        <label>School</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>School</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SpringHalfTermEnd__c</fullName>
        <label>Spring Half Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringHalfTermStart__c</fullName>
        <label>Spring Half Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringTermEnd__c</fullName>
        <label>Spring Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpringTermStart__c</fullName>
        <label>Spring Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Oscar Mawby @ Impact Box 07/01/2020</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SummerHalfTermEnd__c</fullName>
        <label>Summer Half Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SummerHalfTermStart__c</fullName>
        <label>Summer Half Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SummerTermEnd__c</fullName>
        <label>Summer Term End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SummerTermStart__c</fullName>
        <label>Summer Term Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YearEnding__c</fullName>
        <formula>CASE(
(IF(
Month(today())&gt;8,Year(today())+1,Year(today())))
-(IF(
Month(EndDate__c)&gt;8,Year(EndDate__c)+1,Year(EndDate__c)
)),
1,&apos;Previous FY&apos;,
0,&apos;Current FY&apos;,
&apos;Future FY&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Ending</label>
        <type>Text</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>School__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>